# KinovaGen3_iMOVE

./: CMakeLists.txt  README.md
lib/kortex_api/: PASTE_HERE_linux_gcc_x86-64
lib/myo_api/: PASTE_HERE_myolinux_1.1.0_x86_64
src/: CMakeLists.txt  admittance_torque_control_low_level.cpp  myo_test.cpp  pinocchio_test.cpp  torque_compensation_low_level.cpp  torque_control_low_level.cpp  xsens_myo_admittance_position_control.cpp  xsens_myo_admittance_torque_control_low_level.cpp  xsens_test.cpp
urdf/With Gripper/: gen3_robotiq_2f_85.urdf
